// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GiftCard check children /> 1`] = `
<form
  name="giftCardForm"
  onSubmit={[Function]}
/>
`;

exports[`<GiftCard proptypes required /> 1`] = `
<form
  name="giftCardForm"
  onSubmit={[Function]}
/>
`;

exports[`<GiftCard/> 1`] = `
<form
  name="giftCardForm"
  onSubmit={[Function]}
>
  <div>
    test
  </div>
</form>
`;
